@@ -131,7 +131,8 @@ public class FieldDictionary {
                 i++;
                 c = c.getSuperclass();
             }
-            depth = new Integer(i);
+            //不用构造器创建Integer，用静态方法节省时间和空间，因为depth是不可变变量
+            depth = Integer.valueOf(i);
         }
 
         @Override
